--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "typescript": "^5.5.2",
     "vitest": "2.0.5",
     "wrangler": "^3.60.3"
+  },
+  "dependencies": {
+    "@octokit/auth-app": "^7.1.3",
+    "@octokit/core": "^6.1.2",
+    "@octokit/webhooks": "^13.3.0",
+    "hono": "^4.6.10"
   }
 }
