--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "wrangler": "^3.60.3"
   },
   "dependencies": {
+    "@cfworker/jwt": "^6.0.1",
     "@octokit/auth-app": "^7.1.3",
     "@octokit/core": "^6.1.2",
     "@octokit/webhooks": "^13.3.0",
-    "hono": "^4.6.10"
+    "@oslojs/jwt": "^0.2.0",
+    "hono": "^4.6.10",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0"
   }
 }
