--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "cf-typegen": "wrangler types"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.5.2",
     "@cloudflare/workers-types": "^4.20241112.0",
     "typescript": "^5.5.2",
-    "vitest": "2.0.5",
     "wrangler": "^3.60.3"
   },
   "dependencies": {
@@ -21,9 +19,6 @@
     "@octokit/auth-app": "^7.1.3",
     "@octokit/core": "^6.1.2",
     "@octokit/webhooks": "^13.3.0",
-    "@oslojs/jwt": "^0.2.0",
-    "hono": "^4.6.10",
-    "jsonwebtoken": "^9.0.2",
-    "jwks-rsa": "^3.1.0"
+    "hono": "^4.6.10"
   }
 }
