--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -58,9 +58,9 @@ jobs:
 
       - name: Wait for Container Startup  
         run: |  
-          until kubectl get pods -l app=shopware -o jsonpath='{.items[*].status.conditions[?(@.type=="Ready")].status}' | grep -q "True"; do  
+          until kubectl get pods shopware -o jsonpath='{.items[*].status.conditions[?(@.type=="Ready")].status}' | grep -q "True"; do  
             echo "Waiting for Shopware pod to be ready..."  
-            kubectl get pods -l app=shopware  
+            kubectl get pods shopware  
             sleep 10  
           done  
 
