--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -58,13 +58,17 @@ jobs:
 
       - name: Wait for Container Startup  
         run: |  
-          until kubectl get pods shopware -o jsonpath='{.items[*].status.conditions[?(@.type=="Ready")].status}' | grep -q "True"; do  
-            echo "Waiting for Shopware pod to be ready..."  
-            kubectl get pods shopware  
-            sleep 10  
-          done  
+          while true; do  
+            kubectl exec shopware -- bin/console plugin:list  
+              if [ $? -eq 0 ]; then  
+                echo "Command succeeded!"  
+                break  
+              fi  
+            echo "Command failed, retrying in 1 seconds..."  
+            sleep 1  
+          done
 
       - name: Fix APP_URL
         run: |
-          kubectl exec pod/shopware -- mariadb -e 'UPDATE sales_channel_domain SET url = "${{ steps.expose.preview-url }}"'
+          kubectl exec pod/shopware -- mariadb -e 'UPDATE sales_channel_domain SET url = "${{ steps.expose.outputs.preview-url }}"'
           kubectl exec pod/shopware -- bin/console cache:clear:all
