--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -109,6 +109,7 @@ jobs:
         with:
           issue-number: ${{ inputs.prNumber }}
           repository: ${{ inputs.baseRepo }}
+          token: ${{ steps.fetch-token.outputs.token }}
           body: |
             Hey :wave:,
 
