--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -25,6 +25,9 @@ on:
       prNumber:
         description: 'PR number'
         required: true
+      sha:
+        description: 'Commit SHA'
+        required: true
       shopware-version:
         description: 'Shopware version to use'
         required: true
@@ -125,3 +128,18 @@ jobs:
             You can access the Shop here: ${{ steps.expose.outputs.preview-url }}
 
             The URL is only for FriendsOfShopware members.
+
+      - name: Create GitHub check
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ steps.fetch-token.outputs.token }}
+          script: |
+            await github.rest.repos.createCommitStatus({
+              owner: '${{ inputs.baseRepo }}'.split('/')[0],
+              repo: '${{ inputs.baseRepo }}'.split('/')[1],
+              sha: '${{ inputs.sha }}',
+              state: 'success',
+              target_url: '${{ steps.expose.outputs.preview-url }}',
+              description: 'Shopware instance is ready',
+              context: 'Shopware Preview'
+            });
