--- a/.github/workflows/csfixer.yml
+++ b/.github/workflows/csfixer.yml
@@ -5,30 +5,6 @@ on:
       id:
         description: "Execution ID"
         required: true
-      owner:
-        description: 'Owner of the repo'
-        required: true
-      repo:
-        description: 'Repo to run against'
-        required: true
-      branch:
-        description: 'Branch to run against'
-        required: true
-        default: main
-      baseRepo:
-        description: 'baseRepo'
-        required: true
-      prNumber:
-        description: 'PR number'
-        required: true
-      php-version:
-        description: 'PHP version to use'
-        required: true
-        default: "8.2"
-      rules:
-        description: 'Rules to use'
-        required: true
-        default: "@PER-CS2.0,no_unused_imports"
 
 permissions:
   id-token: write
@@ -43,21 +19,31 @@ jobs:
         with:
           id: "${{ inputs.id }}"
 
+      - name: Parse args
+        id: parse-args
+        run: |
+          ARGS='${{ steps.fetch-token.outputs.args }}'
+          PHP_VERSION=$(echo "$ARGS" | jq -r '.[0] // "8.2"')
+          RULES=$(echo "$ARGS" | jq -r '.[1] // "@PER-CS2.0,no_unused_imports"')
+          echo "php-version=$PHP_VERSION" >> $GITHUB_OUTPUT
+          echo "rules=$RULES" >> $GITHUB_OUTPUT
+
       - uses: actions/checkout@v4
         with:
-          repository: "${{ inputs.owner }}/${{ inputs.repo }}"
-          ref: "${{ inputs.branch }}"
+          repository: "${{ steps.fetch-token.outputs.head-owner }}/${{ steps.fetch-token.outputs.head-repo }}"
+          ref: "${{ steps.fetch-token.outputs.head-branch }}"
           token: ${{ steps.fetch-token.outputs.token }}
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "${{ inputs.php-version }}"
+          php-version: "${{ steps.parse-args.outputs.php-version }}"
           tools: php-cs-fixer
 
       - name: Run CSFixer
+        id: csfixer
         run: |
-          php-cs-fixer fix . --rules="${{ inputs.rules }}"
+          php-cs-fixer fix . --rules="${{ steps.parse-args.outputs.rules }}"
           if ! git diff HEAD --quiet; then
             githubUsername="frosh-automation"
             githubId="188718289"
@@ -66,7 +52,14 @@ jobs:
             git config --global user.email "${githubEmail}"
             git add .
             git commit -m "fix: code-style"
-            git push origin "HEAD:${{ inputs.branch }}"
+            git push origin "HEAD:${{ steps.fetch-token.outputs.head-branch }}"
+            echo "changes=true" >> $GITHUB_OUTPUT
+          else
+            echo "changes=false" >> $GITHUB_OUTPUT
           fi
 
-
+      - name: Report result
+        uses: FriendsOfShopware/automation-bot/actions/report-data@main
+        with:
+          id: "${{ inputs.id }}"
+          data: '{"changes": ${{ steps.csfixer.outputs.changes }}}'
