--- a/package.json
+++ b/package.json
@@ -2,24 +2,36 @@
   "name": "automation-bot",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "deploy": "wrangler deploy",
+    "deploy": "npm run build && wrangler deploy",
     "dev": "wrangler dev",
-    "start": "wrangler dev",
+    "dev:frontend": "vite --config frontend/vite.config.ts",
+    "build": "vite build --config frontend/vite.config.ts && vite build",
     "cf-typegen": "wrangler types",
     "build-actions": "cd actions/fetch-token && bunx --bun esbuild --minify --platform=node --format=cjs --bundle src/main/main.ts --outdir=dist/main && bunx --bun esbuild --minify --platform=node --format=cjs --bundle src/post/main.ts --outdir=dist/post && cd ../report-data && bunx --bun esbuild --minify --platform=node --format=cjs --bundle src/main/main.ts --outdir=dist/main"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241112.0",
-    "typescript": "^5.5.2",
-    "wrangler": "^4.56.0",
-    "@actions/core": "^2.0.2"
+    "@actions/core": "^3.0.0",
+    "@cloudflare/workers-types": "^4.20260207.0",
+    "typescript": "^5.9.3",
+    "wrangler": "^4.63.0"
   },
   "dependencies": {
-    "@cfworker/jwt": "^6.0.1",
-    "@octokit/auth-app": "^7.1.3",
-    "@octokit/core": "^6.1.2",
-    "@octokit/webhooks": "^13.3.0",
-    "hono": "^4.11.4"
+    "@cfworker/jwt": "^7.0.4",
+    "@hono/session": "^0.2.0",
+    "@hono/vite-build": "^1.9.2",
+    "@octokit/auth-app": "^8.2.0",
+    "@octokit/core": "^7.0.6",
+    "@octokit/webhooks": "^14.2.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "@vitejs/plugin-vue": "^6.0.4",
+    "daisyui": "^5.5.18",
+    "hono": "^4.11.8",
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.3.1",
+    "vue": "^3.5.27",
+    "vue-router": "^5.0.2",
+    "vue-select": "^4.0.0-beta.6"
   }
 }
