--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -26,8 +26,8 @@ jobs:
         id: parse-args
         run: |
           ARGS='${{ steps.fetch-token.outputs.args }}'
-          SHOPWARE_VERSION=$(echo "$ARGS" | jq -r '.[0] // "6.7.6"')
-          PHP_VERSION=$(echo "$ARGS" | jq -r '.[1] // "8.2"')
+          SHOPWARE_VERSION=$(echo "$ARGS" | jq -r '.["shopware-version"] // "6.7.6"')
+          PHP_VERSION=$(echo "$ARGS" | jq -r '.["php-version"] // "8.2"')
           echo "shopware-version=$SHOPWARE_VERSION" >> $GITHUB_OUTPUT
           echo "php-version=$PHP_VERSION" >> $GITHUB_OUTPUT
 
